--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mysql2": "^3.14.3",
     "path-to-regexp": "^8.2.0",
