--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
     "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.21",
