--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.23.0",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
