--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,17 @@ DB_PORT=5432
 PORT=3000
 JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRES_IN=24h
+API_URL=http://localhost:3000
+PRODUCTION_URL=https://api.miproyecto.com
+NODE_ENV=development
+
+# Pagination settings
+DEFAULT_PAGE_LIMIT=10
+MAX_PAGE_LIMIT=100
+
+# Password validation settings
+PASSWORD_MIN_LENGTH=8
+PASSWORD_REQUIRE_UPPERCASE=true
+PASSWORD_REQUIRE_LOWERCASE=true
+PASSWORD_REQUIRE_NUMBERS=true
+PASSWORD_REQUIRE_SPECIAL=true
