--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "sequelize-cli": "^6.6.3"
   },
   "scripts": {
-    "start": "node app.js",
+    "dev": "node app.js",
     "migrate": "npx sequelize-cli db:migrate --debug",
     "seed": "npx sequelize-cli db:seed:all --debug"
   }
